--- a/styles.css
+++ b/styles.css
@@ -10,5 +10,22 @@ body {
 }
 
 #calculator {
+    max-width: 360px;
     background-color: #0000;
+    padding: 20px;
+}
+
+#display {
+    width: 100%;
+    height: 56px;
+    font-size: 20px;
+    text-align: right;
+    margin-bottom: 10px;
+    padding: 20px;
+    border: 2px solid #0000;
+    border: none;
+    border-radius: 5px;
+    color: #ffff;
+    background-color: #0000;
+    box-sizing: border-box;
 }
