--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     display: flex;
     text-align: center;
     align-items: center;
-    background-color: aqua;
+    background-color: #000;
     justify-content: center;
     height: 100vh;
 }
@@ -13,6 +13,9 @@ body {
     max-width: 360px;
     background-color: #0000;
     padding: 20px;
+    border: 3px solid #ff00007f;
+    border-radius: 12px;
+    box-shadow: 0 10px 20px #f0f7ff;
 }
 
 #display {
@@ -22,10 +25,43 @@ body {
     text-align: right;
     margin-bottom: 10px;
     padding: 20px;
-    border: 2px solid #0000;
     border: none;
     border-radius: 5px;
     color: #ffff;
-    background-color: #0000;
+    background-color: #ffff;
     box-sizing: border-box;
+}
+
+.operator {
+    color: #29bbbb;
+}
+
+#ac {
+    color: #eb0909;
+}
+
+.equal {
+    color: #eb0909;
+}
+
+button {
+    width: calc(25% - 10px);
+    height: 50px;
+    font-size: 20px;
+    margin: 10px 5px;
+    border: none;
+    border-radius: 5px;
+    float: left;
+    background-color: #000;
+    color: #ffff;
+    box-shadow: -1px 1px 30px -5px #ffff;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+button:active {
+    transform: scale(1.05);
+    box-shadow: 0 8px 2px 1px #bb5c29, 0 1.5px 1.5px #29bbbb;
 }
